--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,8 @@ name: Image Build
 on:
   workflow_dispatch:
   push:
-    tags: [v*]
+    branches:
+      - main
 
 env:
   IMAGE_NAME: ghcr.io/kubevda/vdimage-debian-trixie-xfce
@@ -56,7 +57,7 @@ jobs:
           context: src/
           file: src/Containerfile
           push: true
-          tags: ${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+          tags: ${{ env.IMAGE_NAME }}:${{ env.VERSION }} ${{ env.IMAGE_NAME }}:${{ github.sha }}
           platforms: ${{ env.PLATFORMS }}
           cache-from: type=local,src=/home/runner/.${{ env.IMAGE_NAME }}.buildx-cache
           cache-to: type=local,dest=/home/runner/.${{ env.IMAGE_NAME }}.buildx-cache
