--- a/src/rootfs/etc/supervisor/conf.d/dbus.conf
+++ b/src/rootfs/etc/supervisor/conf.d/dbus.conf
@@ -1,6 +1,7 @@
 [program:dbus]
 command=/bin/dbus-daemon --system --nofork --nopidfile
 autostart=true
+user=root
 autorestart=true
 startsecs=5
 startretries=1000000
