can't run as rooooooot

--- a/src/rootfs/etc/supervisor/conf.d/dbus.conf
+++ b/src/rootfs/etc/supervisor/conf.d/dbus.conf
@@ -1,7 +1,6 @@
 [program:dbus]
-command=/bin/dbus-daemon --system --nofork --nopidfile
+command=/usr/bin/dbus-daemon --nofork --nopidfile
 autostart=true
-user=root
 autorestart=true
 startsecs=5
 startretries=1000000
