remove funky options

--- a/src/rootfs/etc/supervisor/conf.d/pulseaudio.conf
+++ b/src/rootfs/etc/supervisor/conf.d/pulseaudio.conf
@@ -1,6 +1,6 @@
 [program:pulseaudio]
 command=/usr/bin/pulseaudio
-environment=DISPLAY=":10",HOME="/var/run/kvdi"
+environment=DISPLAY=":10"
 autostart=true
 autorestart=true
 startsecs=3
