--- a/src/rootfs/etc/supervisor/conf.d/xfce4-session.conf
+++ b/src/rootfs/etc/supervisor/conf.d/xfce4-session.conf
@@ -1,6 +1,6 @@
 [program:xfce4-session]
 command=/usr/bin/xfce4-session
-environment=DISPLAY=":10",HOME="/var/run/kvdi"
+environment=DISPLAY=":10"
 autostart=true
 autorestart=true
 startsecs=5
