fix display option

--- a/src/rootfs/etc/supervisor/conf.d/xfce4-session.conf
+++ b/src/rootfs/etc/supervisor/conf.d/xfce4-session.conf
@@ -1,5 +1,5 @@
 [program:xfce4-session]
-command=/usr/bin/xfce4-session
+command=/usr/bin/xfce4-session --display=:10
 environment=DISPLAY=":10"
 autostart=true
 autorestart=true
