--- a/src/rootfs/etc/supervisor/conf.d/dbus.conf
+++ b/src/rootfs/etc/supervisor/conf.d/dbus.conf
@@ -1,5 +1,5 @@
 [program:dbus]
-command=mkdir -pv /run/dbus && /usr/bin/dbus-daemon --system --nofork --nopidfile
+command=/usr/bin/dbus-daemon --system --nofork --nopidfile
 autostart=true
 autorestart=true
 startsecs=5
