--- a/src/rootfs/etc/supervisor/conf.d/display.conf
+++ b/src/rootfs/etc/supervisor/conf.d/display.conf
@@ -5,6 +5,6 @@ autorestart=true
 startsecs=3
 startretries=1000000
 priority=1
-logfile=/dev/stdout
+logfile=/proc/self/fd/1
 loglevel=debug
 logfile_maxbytes=0
