--- a/src/rootfs/etc/supervisor/conf.d/dbus.conf
+++ b/src/rootfs/etc/supervisor/conf.d/dbus.conf
@@ -5,6 +5,6 @@ autorestart=true
 startsecs=5
 startretries=1000000
 priority=2
-logfile=/dev/stdout
+logfile=/proc/self/fd/1
 loglevel=debug
 logfile_maxbytes=0
