--- a/src/rootfs/etc/supervisor/supervisord.conf
+++ b/src/rootfs/etc/supervisor/supervisord.conf
@@ -5,7 +5,7 @@ chmod=0700
 [supervisord]
 nodaemon=true
 loglevel=debug
-logfile=/dev/stdout
+logfile=/proc/self/fd/1
 logfile_maxbytes=0
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
