run supervisord as root and use it to drop perms

--- a/src/rootfs/etc/supervisor/conf.d/display.conf
+++ b/src/rootfs/etc/supervisor/conf.d/display.conf
@@ -1,10 +1,9 @@
 [program:display]
 command=/usr/bin/Xvnc :10 -rfbunixpath /var/run/kvdi/display.sock -SecurityTypes None
+user=%(USER)s
 autostart=true
 autorestart=true
 startsecs=3
 startretries=1000000
 priority=1
-logfile=/proc/self/fd/1
 loglevel=debug
-logfile_maxbytes=0
