--- a/src/rootfs/etc/supervisor/conf.d/pulseaudio.conf
+++ b/src/rootfs/etc/supervisor/conf.d/pulseaudio.conf
@@ -1,11 +1,10 @@
 [program:pulseaudio]
 command=/usr/bin/pulseaudio
 environment=DISPLAY=":10"
+user=%(USER)s
 autostart=true
 autorestart=true
 startsecs=3
 startretries=1000000
 priority=2
-logfile=/proc/self/fd/1
 loglevel=debug
-logfile_maxbytes=0
