--- a/src/rootfs/etc/supervisor/conf.d/xfce4-session.conf
+++ b/src/rootfs/etc/supervisor/conf.d/xfce4-session.conf
@@ -1,11 +1,10 @@
 [program:xfce4-session]
 command=/usr/bin/xfce4-session --display=:10
 environment=DISPLAY=":10"
+user=%(USER)s
 autostart=true
 autorestart=true
 startsecs=5
 startretries=1000000
 priority=2
-logfile=/proc/self/fd/1
 loglevel=debug
-logfile_maxbytes=0
