--- a/src/rootfs/etc/supervisor/conf.d/dbus.conf
+++ b/src/rootfs/etc/supervisor/conf.d/dbus.conf
@@ -1,10 +1,9 @@
 [program:dbus]
 command=/usr/bin/dbus-daemon --system --nofork --nopidfile
+user=root
 autostart=true
 autorestart=true
 startsecs=5
 startretries=1000000
 priority=2
-logfile=/proc/self/fd/1
 loglevel=debug
-logfile_maxbytes=0
