--- a/src/rootfs/etc/supervisor/supervisord.conf
+++ b/src/rootfs/etc/supervisor/supervisord.conf
@@ -4,9 +4,8 @@ chmod=0700
 
 [supervisord]
 nodaemon=true
+user=supervisord
 loglevel=debug
-logfile=/proc/self/fd/1
-logfile_maxbytes=0
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
 
