--- a/src/rootfs/etc/supervisor/supervisord.conf
+++ b/src/rootfs/etc/supervisor/supervisord.conf
@@ -4,7 +4,7 @@ chmod=0700
 
 [supervisord]
 nodaemon=true
-user=supervisord
+user=root
 loglevel=debug
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
