--- a/src/rootfs/etc/supervisor/conf.d/display.conf
+++ b/src/rootfs/etc/supervisor/conf.d/display.conf
@@ -1,6 +1,6 @@
 [program:display]
 command=/usr/bin/Xvnc :10 -rfbunixpath /var/run/kvdi/display.sock -SecurityTypes None
-user=%(USER)s
+user=%(ENV_USER)s
 autostart=true
 autorestart=true
 startsecs=3
