--- a/src/rootfs/etc/supervisor/conf.d/pulseaudio.conf
+++ b/src/rootfs/etc/supervisor/conf.d/pulseaudio.conf
@@ -1,7 +1,7 @@
 [program:pulseaudio]
 command=/usr/bin/pulseaudio
 environment=DISPLAY=":10"
-user=%(USER)s
+user=%(ENV_USER)s
 autostart=true
 autorestart=true
 startsecs=3
