--- a/src/rootfs/etc/supervisor/conf.d/xfce4-session.conf
+++ b/src/rootfs/etc/supervisor/conf.d/xfce4-session.conf
@@ -1,7 +1,7 @@
 [program:xfce4-session]
 command=/usr/bin/xfce4-session --display=:10
 environment=DISPLAY=":10"
-user=%(USER)s
+user=%(ENV_USER)s
 autostart=true
 autorestart=true
 startsecs=5
